--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,5 +30,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: pruebas unitarias
+        run: pwd
         run: npm run test
     
