--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,14 +26,15 @@ jobs:
   unit-test: 
     runs-on: ubuntu-latest    
     needs: build
-    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
       - name: Correr servidor
         run: node src/app.js
-
+      - uses: actions/checkout@v2
       - name:  correr pruebas unitarias
         run: npm run test
+      - name: printhola
+      run: echo 'hola ${NAME_ENVIRONMENT}'
 
         
     
