--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,6 +26,7 @@ jobs:
   unit-test: 
     runs-on: ubuntu-latest    
     needs: build
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
       - name: Correr servidor
@@ -34,7 +35,7 @@ jobs:
       - name:  correr pruebas unitarias
         run: npm run test
       - name: printhola
-      run: echo 'hola ${NAME_ENVIRONMENT}'
+        run: echo 'hola ${NAME_ENVIRONMENT}'
 
         
     
