--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "express": "^4.17.3",
     "express-myconnection": "^1.0.4",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "ava": "^4.2.0",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
+    "knex": "^1.0.6",
     "mocha": "^9.2.2",
     "nodemon": "^2.0.15",
     "supertest": "^6.2.2"
